--- a/privacy.htm
+++ b/privacy.htm
@@ -162,14 +162,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-107632.htm" title="深入解析《Clash 婉儿》：角色设计、游戏机制与实用技巧">深入解析《Clash 婉儿》：角色设计、游戏机制与实用技巧</a></li>
-                        <li class="py-2"><a href="/news/article-109102.htm" title="解锁日服新天地：Nintendo Switch 科学上网全攻略">解锁日服新天地：Nintendo Switch 科学上网全攻略</a></li>
-                        <li class="py-2"><a href="/news/article-109946.htm" title="深入探讨 vmess 与 ssr：网络代理协议的全面比较与应用">深入探讨 vmess 与 ssr：网络代理协议的全面比较与应用</a></li>
-                        <li class="py-2"><a href="/news/article-108299.htm" title="好游快爆科学上网全攻略：畅享游戏世界，提升下载速度与安全性">好游快爆科学上网全攻略：畅享游戏世界，提升下载速度与安全性</a></li>
-                        <li class="py-2"><a href="/news/article-109943.htm" title="Quantumult到底是干什么用的？全面解析与使用教程">Quantumult到底是干什么用的？全面解析与使用教程</a></li>
                         <li class="py-2"><a href="/news/article-108302.htm" title="Vmess与Shadowsocks速度大比拼：哪个协议更适合你？">Vmess与Shadowsocks速度大比拼：哪个协议更适合你？</a></li>
+                        <li class="py-2"><a href="/news/article-112475.htm" title="如何使用Clash进行在线订阅转换的详细指南">如何使用Clash进行在线订阅转换的详细指南</a></li>
                         <li class="py-2"><a href="/news/article-107633.htm" title="千兆路由器与Clash：打造极速网络体验的终极指南">千兆路由器与Clash：打造极速网络体验的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-112115.htm" title="解密Surfboard苹果：一款融合科技与体验的智能设备全解析">解密Surfboard苹果：一款融合科技与体验的智能设备全解析</a></li>
+                        <li class="py-2"><a href="/news/article-108299.htm" title="好游快爆科学上网全攻略：畅享游戏世界，提升下载速度与安全性">好游快爆科学上网全攻略：畅享游戏世界，提升下载速度与安全性</a></li>
+                        <li class="py-2"><a href="/news/article-111639.htm" title="完整指南：如何购买并配置 Clash 套餐">完整指南：如何购买并配置 Clash 套餐</a></li>
+                        <li class="py-2"><a href="/news/article-112116.htm" title="如何使用V2Ray突破版权限制：全面指南">如何使用V2Ray突破版权限制：全面指南</a></li>
+                        <li class="py-2"><a href="/news/article-112816.htm" title="布谷i科学上网全攻略：从新手入门到进阶使用的完整指南">布谷i科学上网全攻略：从新手入门到进阶使用的完整指南</a></li>
                         <li class="py-2"><a href="/news/article-109098.htm" title="玩转V2Ray新手利器：Flyzy一键工具全面解析与实用指南">玩转V2Ray新手利器：Flyzy一键工具全面解析与实用指南</a></li>
+                        <li class="py-2"><a href="/news/article-110830.htm" title="完整指南：最新版Clash的安装、配置与使用技巧">完整指南：最新版Clash的安装、配置与使用技巧</a></li>
                     </ul>
     </div>
 </div>
@@ -181,7 +183,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">4</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">4</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
